--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ asm
 crash-reports
 CustomSkinLoader/ForgePlugin.log
 crafttweaker.log
+OpenComputersMod-1.7.5.192-lua53-native.64.dll
+OpenComputersMod-1.7.5.192-lua52-native.64.dll
