--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ CustomSkinLoader/ForgePlugin.log
 crafttweaker.log
 OpenComputersMod-1.7.5.192-lua53-native.64.dll
 OpenComputersMod-1.7.5.192-lua52-native.64.dll
+world
+warpDrive_schematics
+CustomSkinLoader/ForgePlugin.log
