--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 .minecraft/config/simplelogin.cfg
-.minecraft\saves
-.minecraft\screenshots
-.minecraft\logs
-.minecraft\XaeroWaypoints*
-.minecraft\usercache.json
-.minecraft\usernamecache.json
-.minecraft\crafttweaker.log
-.minecraft\warpDrive_schematics
-.minecraft\texturepacks
-.minecraft\shaderpacks
-.minecraft\server-resource-packs
-.minecraft\crash-reports
-.minecraft\coremods
-.minecraft\assets
-.minecraft\asm
-.minecraft\.mixin.out
+.minecraft/saves
+.minecraft/screenshots
+.minecraft/logs
+.minecraft/XaeroWaypoints*
+.minecraft/usercache.json
+.minecraft/usernamecache.json
+.minecraft/crafttweaker.log
+.minecraft/warpDrive_schematics
+.minecraft/texturepacks
+.minecraft/shaderpacks
+.minecraft/server-resource-packs
+.minecraft/crash-reports
+.minecraft/coremods
+.minecraft/assets
+.minecraft/asm
+.minecraft/.mixin.out
+.minecraft/config/customloadingscreen_timings.nbt
