--- a/instance.cfg
+++ b/instance.cfg
@@ -1,23 +1,43 @@
+AutoCloseConsole=false
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
+JavaPath=C:/Program Files/Java/jre1.8.0_341/bin/javaw.exe
 JoinServerOnLaunch=false
+JoinServerOnLaunchAddress=
+JvmArgs=
 LWJGLVersion=
+LaunchMaximized=false
 LiteloaderVersion=
 LogPrePostOutput=true
 MCLaunchMethod=LauncherPart
+MaxMemAlloc=6144
+MinMemAlloc=1024
+MinecraftWinHeight=480
+MinecraftWinWidth=854
 OverrideCommands=false
 OverrideConsole=false
 OverrideGameTime=false
+OverrideJava=false
 OverrideJavaArgs=false
 OverrideJavaLocation=false
 OverrideMCLaunchMethod=false
 OverrideMemory=false
 OverrideNativeWorkarounds=false
 OverrideWindow=false
+PermGen=128
+PostExitCommand=
+PreLaunchCommand=
+RecordGameTime=true
+ShowConsole=false
+ShowConsoleOnError=true
+ShowGameTime=true
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
 iconKey=PS_OS
-lastLaunchTime=1659315702654
-lastTimePlayed=300
+lastLaunchTime=1659383250920
+lastTimePlayed=668
 name=Our Survival: New Horizons
 notes=
-totalTimePlayed=154054
+totalTimePlayed=154722
