--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 .minecraft/CustomSkinLoader/ForgePlugin.log
 .minecraft/CustomSkinLoader/ForgePlugin.log
 .minecraft/CustomSkinLoader/CustomSkinLoader.log
+.minecraft/config/warpdrive/
