--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -145,6 +145,8 @@ crafting {
     B:cr0s.warpdrive.block.atomic.BlockElectromagnetPlain=true
     B:cr0s.warpdrive.block.atomic.BlockParticlesCollider=true
     B:cr0s.warpdrive.block.atomic.BlockVoidShellPlain=true
+    B:cr0s.warpdrive.block.breathing.BlockAirFlow=true
+    B:cr0s.warpdrive.block.breathing.BlockAirSource=true
     B:cr0s.warpdrive.block.decoration.BlockDecorative=true
     B:cr0s.warpdrive.block.decoration.BlockGas=true
     B:cr0s.warpdrive.block.detection.BlockCloakingCoil=true
