--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 .minecraft/CustomSkinLoader/ForgePlugin.log
 .minecraft/CustomSkinLoader/CustomSkinLoader.log
 .minecraft/config/warpdrive/
+.minecraft/sl_password.txt
+.minecraft/config/jei/bookmarks.ini
