--- a/.minecraft/config/adpother/adpother.cfg
+++ b/.minecraft/config/adpother/adpother.cfg
@@ -48,13 +48,13 @@ Server {
         B:AnimalFeeding=false
 
         # Defines the rate of emissions from this source (in percents).
-        I:Breakables=20
+        I:Breakables=80
 
         # Defines the rate of emissions from this source (in percents).
-        I:Entities=60
+        I:Entities=80
 
         # Enables / disables emissions from this source. [default: true]
-        B:Explosion=true
+        B:Explosion=false
 
         # Enables / disables emissions from this source. [default: true]
         B:Fire=true
